# bluespy_codecs

./: .clang-format  .gitignore  .gitmodules  AAC.c  AAC.cpp  APTX.c  APTX.cpp  CMakeLists.txt  CMakePresets.json  LC3.c  LC3.cpp  LDAC.c  LDAC.cpp  README.md  TEMPLATE_CODEC.c  TEMPLATE_CODEC.cpp  aac.cpp  aptx.cpp
.github/workflows/: build-codec-dlls.yml
ci-stubs/bluespy/: bluespy.cpp  bluespy.h
include/: bluespy_codec_defs.h  bluespy_codec_interface.h  codec_structures.h
